# sxt-proof-of-sql

./: .gitignore  COMMIT_GUIDELINES.md  CONTRIBUTING.md  Cargo.toml  HOWTO-BUILD-WASM.txt  LICENSE  NOTES.txt  QUESTIONS.txt  README.md  clippy.toml  foundry.toml  package-lock.json  package.json  run_ci.sh  rust-toolchain.toml
benches/ec_ops/: Cargo.toml  README.md
benches/ec_ops/src/: main.rs
benches/provable_sql/: Cargo.toml  README.md  build.rs
benches/provable_sql/scripts/: benchmark_executor.py  benchmark_setting.py  html_generator.py  plot_generator.py  requirements.txt  run_benches.py  statistics_generator.py  system_utilities.py
benches/provable_sql/src/: main.rs  toggle_collect.c
crates/powers-of-tau-util/: Cargo.toml
crates/powers-of-tau-util/src/: main.rs
crates/proof-of-sql/: .solhint.json  Cargo.toml  README.md  foundry.toml
crates/proof-of-sql-benchmarks/: Cargo.toml
crates/proof-of-sql-benchmarks/src/: main.rs
crates/proof-of-sql-benchmarks/src/scripts/: run_benchmarks.sh
crates/proof-of-sql-benchmarks/src/utils/: queries.rs  random_util.rs  results_io.rs
crates/proof-of-sql-parser/: Cargo.toml  README.md  build.rs
crates/proof-of-sql-parser/src/: big_decimal_ext.rs  error.rs  identifier.rs  intermediate_ast.rs  intermediate_ast_tests.rs  intermediate_decimal.rs  intermediate_time.rs  lib.rs  parser_time.rs  resource_id.rs  select_statement.rs  sql.lalrpop  sqlparser.rs  test_utility.rs  utility.rs
crates/proof-of-sql-parser/src/posql_time/: error.rs  mod.rs  timestamp.rs  timezone.rs  unit.rs
crates/proof-of-sql-planner/: Cargo.toml
crates/proof-of-sql-planner/src/: aggregate.rs  context.rs  conversion.rs  df_util.rs  error.rs  expr.rs  lib.rs  main.rs  plan.rs  proof_plan_with_postprocessing.rs  util.rs
crates/proof-of-sql-planner/src/postprocessing/: error.rs  expression_evaluation.rs  expression_evaluation_error.rs  expression_evaluation_test.rs  mod.rs  postprocessing_step.rs  select_postprocessing.rs  select_postprocessing_test.rs
crates/proof-of-sql-planner/tests/: e2e_tests.rs
crates/proof-of-sql-utils/: Cargo.toml  big_decimal_ext.rs
crates/proof-of-sql-utils/src/: big_decimal_ext.rs  lib.rs
crates/proof-of-sql/benches/: README.md  bench_append_rows.rs  criterion_benches.rs  jaeger_benches.rs  jaeger_setup.rs  posql_benches.rs  simple_benches.rs  simple_graph.r
crates/proof-of-sql/benches/scaffold/: benchmark_accessor.rs  mod.rs  queries.rs  querys.rs  random_util.rs
crates/proof-of-sql/examples/albums/: albums.csv  main.rs
crates/proof-of-sql/examples/avocado-prices/: avocado-prices.csv  main.rs
crates/proof-of-sql/examples/books/: books.csv  main.rs
crates/proof-of-sql/examples/brands/: brands.csv  main.rs
crates/proof-of-sql/examples/cars/: cars.csv
crates/proof-of-sql/examples/cat_breeds/: cat_breeds.csv  main.rs
crates/proof-of-sql/examples/census/: census-income.csv  main.rs
crates/proof-of-sql/examples/countries/: countries.csv  countries_gdp.csv  main.rs
crates/proof-of-sql/examples/dinosaurs/: dinosaurs.csv  main.rs
crates/proof-of-sql/examples/dog_breeds/: dog_breeds.csv  main.rs
crates/proof-of-sql/examples/hello_world/: README.md  main.rs
crates/proof-of-sql/examples/movies/: main.rs  movies.csv
crates/proof-of-sql/examples/null_arithmetic/: README.md  main.rs  null_arithmetic.csv
crates/proof-of-sql/examples/plastics/: main.rs  plastics.csv
crates/proof-of-sql/examples/posql_db/: README.md  commit_accessor.rs  csv_accessor.rs  hello.proof  hello_world.csv  main.rs  record_batch_accessor.rs  run_example.sh  sxt.table.commit  sxt.table.csv
crates/proof-of-sql/examples/programming_books/: main.rs  programming_books.csv
crates/proof-of-sql/examples/rockets/: launch_vehicles.csv  main.rs  rockets.csv
crates/proof-of-sql/examples/space/: main.rs  planets.csv  space_travellers.csv
crates/proof-of-sql/examples/sports/: main.rs  sports.csv
crates/proof-of-sql/examples/stocks/: main.rs  stocks.csv
crates/proof-of-sql/examples/sushi/: fish.csv  main.rs
crates/proof-of-sql/examples/tech_gadget_prices/: main.rs  tech_gadget_prices.csv
crates/proof-of-sql/examples/time/: main.rs
crates/proof-of-sql/examples/vehicles/: main.rs  vehicles.csv
crates/proof-of-sql/examples/wood_types/: main.rs  wood_types.csv
crates/proof-of-sql/examples/zk_data/: main.rs  zk_data.csv
crates/proof-of-sql/sol_src/base/: ChallengeStack.pre.sol  LagrangeBasisEvaluation.sol
crates/proof-of-sql/sol_src/tests/: TestScript.t.sol  TestYulImport.t.pre.sol  TestYulImport.t.psol
crates/proof-of-sql/sol_src/utils/: README.md  process_imports.sh
crates/proof-of-sql/src/: lib.rs
crates/proof-of-sql/src/arrow/: mod.rs
crates/proof-of-sql/src/base/: map.rs  mod.rs  rayon_cfg.rs  ref_into.rs  resource_id.rs  serialize.rs  sqlparser.rs  utility.rs
crates/proof-of-sql/src/evm_compatibility/: mod.rs  primitive_serialize_ext.rs  (+1 more)
crates/proof-of-sql/tests/: decimal_integration_tests.rs  extra_tests.rs  integration_tests.rs  timestamp_integration_tests.rs
crates/proofs/: Cargo.toml
crates/proofs-sql/: Cargo.toml  README.md  build.rs
crates/proofs-sql/src/: decimal_unknown.rs  error.rs  identifier.rs  intermediate_ast.rs  intermediate_ast_tests.rs  intermediate_ast_utility.rs  intermediate_decimal.rs  lib.rs  resource_id.rs  select_statement.rs  sql.lalrpop  symbols.rs  test.rs  test_utility.rs
crates/proofs-wasm-test/: Cargo.toml
crates/proofs-wasm-test/src/: main.rs
crates/proofs/benches/: README.md  criterion_benches.rs  jaeger_benches.rs  sumcheck.rs
crates/proofs/examples/: hello_world.rs
crates/proofs/src/: lib.rs
crates/proofs/tests/: decimal_integration_tests.rs  integration_tests.rs
crates/verifier-wasm/: Cargo.toml  README.md
crates/verifier-wasm-tester/: Cargo.toml  README.md
crates/verifier-wasm-tester/js/: run_verifier_wasm.js
crates/verifier-wasm-tester/src/: main.rs
crates/verifier-wasm/src/: lib.rs
scripts/parquet-to-commitments/: Cargo.toml
scripts/parquet-to-commitments/src/: ddl_ethereum_snapshot_2024_10_11.sql  main.rs
src/proofs/: Cargo.toml
(+1294 files in other folders)
