[workspace]
resolver = "2"
members = ["crates/proof-of-sql", "crates/proof-of-sql-parser", "crates/verifier-wasm", "crates/verifier-wasm-tester"]

[workspace.package]
edition = "2021"
exclude = ["**/.gitignore", ".gitignore"]
repository = "https://github.com/spaceandtimelabs/sxt-proof-of-sql"
version = "0.0.0" # DO NOT CHANGE THIS LINE! This will be automatically updated
license-file = "LICENSE"

[workspace.dependencies]
# alloy-primitives = { version = "0.8.1" }
# alloy-sol-types = { version = "0.8.1" }
ark-bls12-381 = { version = "0.4.0" }
ark-curve25519 = { version = "0.4.0" }
ark-ec = { version = "0.4.0", features = [ "parallel" ] }
ark-ff = { version = "0.4.0", features = [ "parallel" ] }
ark-poly = { version = "0.4.0", features = [ "parallel" ] }
ark-serialize = { version = "0.4.0" }
ark-std = { version = "0.4.0", features = [ "parallel" ] }
arrayvec = { version = "0.7" }
arrow = { version = "51.0" }
arrow-csv = { version = "51.0" }
bincode = { version = "=1.3.3" }
bit-iter = { version = "1.1.1" }
bigdecimal = { version = "0.4.5", features = ["serde"] }
blake3 = { version = "1.3.3" }
blitzar = { version = "3.1.0" }
bumpalo = { version = "3.11.0" }
bytemuck = {version = "1.16.3", features = ["derive"]}
byte-slice-cast = { version = "1.2.1" }
clap = { version = "4.5.4" }
criterion = { version = "0.5.1" }
chrono = { version = "0.4.38", default-features = false }
curve25519-dalek = { version = "4", features = ["rand_core"] }
derive_more = { version = "0.99" }
flexbuffers = { version = "2.0.0" }
# forge-script = { git = "https://github.com/foundry-rs/foundry", tag = "nightly-bf1a39980532f76cd76fd87ee32661180f606435" }
getrandom = { version = "0.2", features = ["js"] }
indexmap = { version = "2.1" }
itertools = { version = "0.13.0" }
lalrpop-util = { version = "0.20.0" }
lazy_static = { version = "1.4.0" }
merlin = { version = "2" }
num-traits = { version = "0.2" }
num-bigint = { version = "0.4.4", default-features = false }
opentelemetry = { version = "0.23.0" }
opentelemetry-jaeger = { version = "0.20.0" }
postcard = { version = "1.0" }
proof-of-sql = { path = "crates/proof-of-sql" } # We automatically update this line during release. So do not modify it!
proof-of-sql-parser = { path = "crates/proof-of-sql-parser" } # We automatically update this line during release. So do not modify it!
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rayon = { version = "1.5" }
serde = { version = "1" }
serde_json = { version = "1" }
thiserror = { version = "1" }
tiny-keccak = { version = "2.0.2", features = [ "keccak" ] }
# tokio = { version = "1.39.3" }
tracing = { version = "0.1.36" }
tracing-opentelemetry = { version = "0.22.0" }
tracing-subscriber = { version = "0.3.0" }
wasm-bindgen = { version = "0.2.93" }
zerocopy = { version = "0.7.34" }

[workspace.lints.rust]
missing_docs = "warn"
