[workspace]
resolver = "2"
members = ["crates/proof-of-sql", "crates/proof-of-sql-parser"]

[workspace.package]
edition = "2021"
exclude = ["**/.gitignore", ".gitignore"]
repository = "https://github.com/spaceandtimelabs/sxt-proof-of-sql"
version = "0.0.0" # DO NOT CHANGE THIS LINE! This will be automatically updated
license-file = "LICENSE"

[workspace.dependencies]
ahash = { version = "0.8.11", default-features = false }
alloy-sol-types = { version = "0.8.5" }
ark-bls12-381 = { version = "0.4.0" }
ark-curve25519 = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-poly = { version = "0.4.0" }
ark-serialize = { version = "0.4.0" }
ark-std = { version = "0.4.0", default-features = false }
arrayvec = { version = "0.7", default-features = false }
arrow = { version = "51.0" }
arrow-csv = { version = "51.0" }
bit-iter = { version = "1.1.1" }
bigdecimal = { version = "0.4.5", default-features = false, features = ["serde"] }
blake3 = { version = "1.3.3", default-features = false }
blitzar = { version = "3.3.0" }
bumpalo = { version = "3.11.0" }
bytemuck = {version = "1.16.3", features = ["derive"]}
byte-slice-cast = { version = "1.2.1", default-features = false }
clap = { version = "4.5.4" }
criterion = { version = "0.5.1" }
chrono = { version = "0.4.38", default-features = false }
curve25519-dalek = { version = "4", features = ["rand_core"] }
derive_more = { version = "0.99" }
flexbuffers = { version = "2.0.0" }
indexmap = { version = "2.1", default-features = false }
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }
lalrpop = { version = "0.22.0" }
lalrpop-util = { version = "0.22.0", default-features = false }
merlin = { version = "2" }
num-traits = { version = "0.2", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
opentelemetry = { version = "0.23.0" }
opentelemetry-jaeger = { version = "0.20.0" }
postcard = { version = "1.0" }
proof-of-sql = { path = "crates/proof-of-sql" } # We automatically update this line during release. So do not modify it!
proof-of-sql-parser = { path = "crates/proof-of-sql-parser" } # We automatically update this line during release. So do not modify it!
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rayon = { version = "1.5" }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
snafu = { version = "0.8.4", default-features = false }
tiny-keccak = { version = "2.0.2", features = [ "keccak" ] }
tracing = { version = "0.1.36", default-features = false }
tracing-opentelemetry = { version = "0.22.0" }
tracing-subscriber = { version = "0.3.0" }
wasm-bindgen = { version = "0.2.92" }
zerocopy = { version = "0.7.34" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
missing_panics_doc = "deny"
doc_markdown = "deny"
match_same_arms = "deny"
similar_names = "deny"
many_single_char_names = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
uninlined_format_args = "deny"
semicolon_if_nothing_returned = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
must_use_candidate = "deny"
range_plus_one = "deny"
cloned_instead_of_copied = "deny"
from_iter_instead_of_collect = "deny"
cast_lossless = "deny"
redundant_closure_for_method_calls = "deny"
inconsistent_struct_constructor = "deny"
default_trait_access = "deny"
module_name_repetitions = "deny" 
wildcard_imports = "deny"
unused_self = "deny"
manual_let_else = "deny"
struct_field_names = "deny"
unicode_not_nfc = "deny"               
manual_string_new = "deny"  
large_types_passed_by_value = "deny" 
map_unwrap_or = "deny"
if_not_else = "deny" 
explicit_deref_methods = "deny" 
items_after_statements = "deny"
bool_to_int_with_if = "deny"           
ptr_as_ptr = "deny"        
match_wildcard_for_single_variants = "deny"   
match_bool = "deny"  
manual_assert = "deny"    
trivially_copy_pass_by_ref = "deny"
too_many_lines = "deny"
cast_possible_wrap = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
