[workspace]
resolver = "2"
members = ["crates/proof-of-sql", "crates/proof-of-sql-parser"]

[workspace.package]
edition = "2021"
exclude = ["**/.gitignore", ".gitignore"]
repository = "https://github.com/spaceandtimelabs/sxt-proof-of-sql"
version = "0.0.0" # DO NOT CHANGE THIS LINE! This will be automatically updated
license-file = "LICENSE"

[workspace.dependencies]
ahash = { version = "0.8.11", default-features = false }
ark-bls12-381 = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-curve25519 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
ark-std = { version = "0.5.0", default-features = false }
arrayvec = { version = "0.7", default-features = false }
arrow = { version = "51.0.0" }
arrow-csv = { version = "51.0.0" }
bincode = { version = "2.0.0-rc.3", default-features = false }
bit-iter = { version = "1.1.1" }
bigdecimal = { version = "0.4.5", default-features = false, features = ["serde"] }
blake3 = { version = "1.3.3", default-features = false }
blitzar = { version = "4.0.0" }
bnum = { version = "0.3.0" }
bumpalo = { version = "3.11.0" }
bytemuck = {version = "1.16.3", features = ["derive"]}
byte-slice-cast = { version = "1.2.1", default-features = false }
clap = { version = "4.5.4" }
criterion = { version = "0.5.1" }
chrono = { version = "0.4.38", default-features = false }
curve25519-dalek = { version = "4", features = ["rand_core"] }
derive_more = { version = "0.99" }
enum_dispatch = { version = "0.3.13" }
ff = { version = "0.13.0"}
flexbuffers = { version = "2.0.0" }
indexmap = { version = "2.1", default-features = false }
indicatif = { version = "0.17.8", default-features = false }
itertools = { version = "0.13.0", default-features = false, features = ["use_alloc"] }
lalrpop = { version = "0.22.0" }
lalrpop-util = { version = "0.22.0", default-features = false }
merlin = { version = "2" }
nova-snark = { version = "0.39.0" }
num-traits = { version = "0.2", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
opentelemetry = { version = "0.23.0" }
opentelemetry-jaeger = { version = "0.20.0" }
postcard = { version = "1.0" }
proof-of-sql = { path = "crates/proof-of-sql" } # We automatically update this line during release. So do not modify it!
proof-of-sql-parser = { path = "crates/proof-of-sql-parser" } # We automatically update this line during release. So do not modify it!
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3.1" }
rand_core = { version = "0.6", default-features = false }
rayon = { version = "1.5" }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
snafu = { version = "0.8.4", default-features = false }
sqlparser = { version = "0.45.0", default-features = false }
sysinfo = { version = "0.33" }
tiny-keccak = { version = "2.0.2", features = [ "keccak" ] }
tempfile = { version = "3.13.0", default-features = false }
tracing = { version = "0.1.36", default-features = false }
tracing-opentelemetry = { version = "0.22.0" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
wasm-bindgen = { version = "0.2.92" }
zerocopy = { version = "0.7.34" }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
missing_errors_doc = "allow"
pedantic = { level = "warn", priority = -1 }
