[package]
name = "ec_ops"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
blitzar = { workspace = true }
curve25519-dalek = { workspace = true }
rand = { workspace = true }
