[package]
name = "provable_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blitzar = { workspace = true }
clap = { version = "4", features = ["derive"] }
proofs = { path = "../../crates/proofs", features = ["test"] }
proofs-sql = { path = "../../crates/proofs-sql" }
rand = { workspace = true }
tracing = { version = "0.1.36", features = ["attributes"] }

[build-dependencies]
cc = { version = "1.0", optional = true }

[features]
default = []
valgrind = ["dep:cc"]
