[package]
name = "proof-of-sql-benchmarks"
edition.workspace = true
exclude.workspace = true
repository.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
ark-serialize = { version = "0.5.0" }
ark-std = { version = "0.5.0", default-features = false }
blitzar = { version = "4.3.0" }
bumpalo = { version = "3.11.0" }
clap = { version = "4.5.4", features = ["derive", "env"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
csv = { version = "1.3.1" }
curve25519-dalek = { version = "4", features = ["rand_core"] }
ff = { version = "0.13.0"}
halo2curves = { version = "0.8.0", default-features = false }
indexmap = { version = "2.8", default-features = false }
nova-snark = { version = "0.41.0" }
opentelemetry = { version = "0.23.0" }
opentelemetry-jaeger = { version = "0.20.0" }
plotters = { version = "0.3.7" }
proof-of-sql = { version = "0.91.23", features = ["hyperkzg_proof"] }
rand = { version = "0.8", default-features = false }
sqlparser = { version = "0.45.0", default-features = false }
tracing = { version = "0.1.36", default-features = false }
tracing-opentelemetry = { version = "0.22.0" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

[lints]
workspace = true

[[bench]]
name = "bench_append_rows"
harness = false
