[package]
name = "proof-of-sql-planner"
edition.workspace = true
exclude.workspace = true
repository.workspace = true
version.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow = { workspace = true }
datafusion = { version = '38.0.0', default-features = false }
# getrandom and uuid must be compiled with js feature
getrandom = { version = "0.2.15", features = ["js"] }
indexmap = { workspace = true }
proof-of-sql = { path = "../proof-of-sql", default-features = false, features = ["arrow"] }
proof-of-sql-parser = { path = "../proof-of-sql-parser" }
snafu = { workspace = true }
sqlparser = { workspace = true }
uuid = { version = "1.15.1", default-features = false, features = ["js"] }

[dev-dependencies]
ark-std = { workspace = true }
bumpalo = { workspace = true }

[lints]
workspace = true
