[package]
publish = true
name = "proof-of-sql"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "High performance zero knowledge (ZK) prover for SQL."
exclude = { workspace = true }
license-file = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = true
test = true

[dependencies]
ark-bls12-381 = { workspace = true }
ark-curve25519 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
arrow = { workspace = true, optional = true }
bit-iter = { workspace = true }
bigdecimal = { workspace = true }
blake3 = { workspace = true }
blitzar = { workspace = true, optional = true }
bumpalo = { workspace = true, features = ["collections"] }
bytemuck = { workspace = true }
byte-slice-cast = { workspace = true }
curve25519-dalek = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
merlin = { workspace = true }
num-traits = { workspace = true }
num-bigint = { workspace = true, default-features = false }
postcard = { workspace = true, features = ["alloc"] }
proof-of-sql-parser = { workspace = true }
rand = { workspace = true, default-features = false, optional = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
zerocopy = { workspace = true }

[dev_dependencies]
arrow-csv = { workspace = true }
blitzar = { workspace = true }
clap = { workspace = true, features = ["derive"] }
criterion = { workspace = true, features = ["html_reports"] }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
rand = { workspace = true, default-features = false }
rand_core = { workspace = true, default-features = false }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
flexbuffers = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["arrow-csv"]

[features]
default = ["arrow", "blitzar"]
arrow = ["dep:arrow"]
test = ["dep:rand"]

[lints]
workspace = true

[[example]]
name = "hello_world"
required-features = [ "blitzar", "test" ]

[[example]]
name = "posql_db"
required-features = [ "arrow", "blitzar" ]

[[bench]]
name = "criterion_benches"
harness = false
required-features = [ "blitzar" ]

[[bench]]
name = "jaeger_benches"
harness = false
required-features = [ "blitzar" ]