[package]
publish = true
name = "proof-of-sql"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "High performance zero knowledge (ZK) prover for SQL."
exclude = { workspace = true }
license-file = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = true
test = true

[dependencies]
ahash = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-curve25519 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
arrow = { workspace = true, optional = true }
bit-iter = { workspace = true }
bigdecimal = { workspace = true }
blake3 = { workspace = true }
blitzar = { workspace = true, optional = true }
bumpalo = { workspace = true, features = ["collections"] }
bytemuck = { workspace = true }
byte-slice-cast = { workspace = true }
curve25519-dalek = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
merlin = { workspace = true, optional = true }
num-traits = { workspace = true }
num-bigint = { workspace = true, default-features = false }
postcard = { workspace = true, features = ["alloc"] }
proof-of-sql-parser = { workspace = true }
rand = { workspace = true, default-features = false, optional = true }
rayon = { workspace = true, optional = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlparser = { workspace = true }
tiny-keccak = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
zerocopy = { workspace = true }

[dev-dependencies]
alloy-sol-types = { workspace = true }
arrow-csv = { workspace = true }
blitzar = { workspace = true }
clap = { workspace = true, features = ["derive"] }
criterion = { workspace = true, features = ["html_reports"] }
merlin = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-jaeger = { workspace = true }
rand = { workspace = true, default-features = false }
rand_core = { workspace = true, default-features = false }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
flexbuffers = { workspace = true }

[package.metadata.cargo-udeps.ignore]
development = ["arrow-csv"]

[features]
default = ["arrow", "perf"]
arrow = ["dep:arrow", "std"]
blitzar = ["dep:blitzar", "dep:merlin", "std"]
test = ["dep:rand", "std"]
perf = ["blitzar", "cpu-perf"]
cpu-perf = ["rayon", "ark-ec/parallel", "ark-poly/parallel", "ark-ff/asm"]
rayon = ["dep:rayon", "std"]
std = ["snafu/std"]

[lints]
workspace = true

[[example]]
name = "hello_world"
required-features = ["test"]

[[example]]
name = "posql_db"
required-features = [ "arrow" ]

[[example]]
name = "space"
required-features = [ "arrow" ]

[[example]]
name = "dog_breeds"
required-features = [ "arrow" ]

[[example]]
name = "wood_types"
required-features = [ "arrow" ]

[[bench]]
name = "posql_benches"
harness = false
required-features = [ "blitzar" ]

[[bench]]
name = "bench_append_rows"
harness = false
required-features = [ "test" ]

[[bench]]
name = "jaeger_benches"
harness = false
required-features = [ "blitzar" ]
