[package]
name = "proofs-sql"
version = "0.0.0" # This version will be automatically updated
build = "build.rs"
edition = "2021"
repository = "https://github.com/spaceandtimelabs/proofs"
description = "Parse provable SQL queries into Intermediate ASTs"
exclude = [
    "**/.gitignore",
    ".gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", features = ["serde"] }
lalrpop-util = "0.19.8"
regex = "1"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"

[build-dependencies]
lalrpop = "0.19.8"

[dev-dependencies]
serde_json = "1"
