[package]
publish = true
name = "proofs-sql"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
build = "build.rs"
description = "Parse provable SQL queries into Intermediate ASTs"
exclude = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { workspace = true, features = ["serde"] }
lalrpop-util = { workspace = true, features = ["lexer"] }
regex = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
thiserror = { workspace = true }

[build-dependencies]
lalrpop = { version = "0.19.9" }

[dev-dependencies]
serde_json = "1"
