[package]
name = "proofs-wasm-test"
edition.workspace = true
exclude.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { workspace = true }
proofs = { path = "../proofs", default-features = false, features = ["test"] }
wasm-bindgen = { workspace = true }