[package]
name = "proofs"
version = "0.0.0" # This version will be automatically updated
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "24.0.0"
bumpalo = { version = "3.11.0", features = ["collections"] }
byte-slice-cast = "1.2.1"
integer-encoding = "3.0.4"
ark-ff = { git = "https://github.com/arkworks-rs/algebra.git", rev = "bf1e24211df2be1ee317e382aa128281766e9c1f" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra.git", rev = "bf1e24211df2be1ee317e382aa128281766e9c1f" }
ark-std = "^0.3.0"
curve25519-dalek = { version = "3", features = ["serde"] }
hashbrown = "0.11.2"
merlin = "2"
thiserror = "1"
serde = { version = "1", features = ["serde_derive"] }
postcard = {version = "1.0", features = ["alloc"] }
num-traits = "0.2"
rayon = "1.5"
dyn_partial_eq = "0.1.2"
tracing = { version = "0.1.36", features = ["attributes"] }
rand = { version = "0.7", optional = true }
indexmap = { version = "1.9", optional = true }
polars = { version = "0.25.1", features = ["lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str", "list_eval", "rank", "lazy_regex"], optional = true }

# SxT dependencies
proofs-sql= {path = "../proofs-sql"}
proofs-gpu = {version = "3.1.1", registry = "artifactory"}

[dev_dependencies]
criterion = "0.4"
rand = { version = "0.7"}
rand_core = { version = "0.5" }
indexmap = { version = "1.9" }
polars = { version = "0.25.1", features = ["lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str", "list_eval", "rank", "lazy_regex"] }

[[bench]]
name = "sumcheck"
harness = false

[features]
default = []
test = ["dep:rand", "dep:polars", "dep:indexmap"]
