[package]
publish = true
name = "proofs"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Generates and verifies cryptographic proofs for SxT OLTP queries."
exclude = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = true
test = true

[dependencies]
ark-curve25519 = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
arrow = { workspace = true }
blake3 = { workspace = true }
blitzar = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }
byte-slice-cast = { workspace = true }
curve25519-dalek = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
dyn_partial_eq = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
integer-encoding = { workspace = true }
merlin = { workspace = true }
num-traits = { workspace = true }
polars = { workspace = true, features = ["lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str", "list_eval", "rank", "lazy_regex", "bigidx"] }
postcard = { workspace = true, features = ["alloc"] }
proofs-sql = { workspace = true }
rand = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }

[dev_dependencies]
criterion = "0.4"
polars = { version = "0.25.1", features = ["lazy", "csv-file", "strings", "temporal", "dtype-duration", "dtype-categorical", "concat_str", "list_eval", "rank", "lazy_regex"] }
rand = { version = "0.7" }
rand_core = { version = "0.5" }
serde_json = "1"

[[bench]]
harness = false
name = "sumcheck"

[features]
default = []
test = ["dep:rand"]
