[package]
publish = true
name = "proofs"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
description = "Generates and verifies cryptographic proofs for SxT OLTP queries."
exclude = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = true
test = true

[dependencies]
ark-bls12-381 = { workspace = true }
ark-curve25519 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
arrow = { workspace = true }
bit-iter = { workspace = true }
blake3 = { workspace = true }
blitzar = { workspace = true }
bumpalo = { workspace = true, features = ["collections"] }
byte-slice-cast = { workspace = true }
curve25519-dalek = { workspace = true, features = ["serde"] }
derive_more = { workspace = true }
dyn_partial_eq = { workspace = true }
hashbrown = { workspace = true }
indexmap = { workspace = true }
integer-encoding = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
merlin = { workspace = true }
num-traits = { workspace = true }
polars = { workspace = true, features = ["lazy", "bigidx", "dtype-decimal", "serde-lazy"] }
postcard = { workspace = true, features = ["alloc"] }
proofs-sql = { workspace = true }
rand = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["attributes"] }
typetag = { workspace = true }

[dev_dependencies]
criterion = { workspace = true }
polars = { workspace = true, features = ["lazy"] }
rand = { workspace = true }
rand_core = { workspace = true }
serde_json = { workspace = true }
flexbuffers = { workspace = true }

[[bench]]
harness = false
name = "sumcheck"

[features]
default = []
test = ["dep:rand"]
